dark mode color, client data, and dark mode toggle on mobile fix

--- a/src/assets/css/dark.css
+++ b/src/assets/css/dark.css
@@ -4,7 +4,7 @@
 /* Mobile */
 @media only screen and (min-width: 0rem) {
     :root {
-        --dark: #1d4f38;
+        --dark: #0e261b;
         --darkBreaker: rgba(0, 0, 0, 0.3);
         --medium: #2c394b;
         --accent: #334756;
